--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@material-tailwind/react": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.18.0",
     "react-social-icons": "^6.6.0"
   },
